<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search_action_menu_item"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/sort_menu_item"
        android:icon="@drawable/ic_sort_24px"
        android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/order_menu_item"
        android:icon="@drawable/ic_swap_vert_black_24dp"
        android:title="@string/order"
        app:showAsAction="always" />


</menu>