<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textview_updated_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="מעודכן לתאריך 445.22" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/all_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_only_in_stock" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:helperText="@string/search_input_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint_menu"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:textDirection="rtl" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vendor_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input_layout">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_vendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:dropDownWidth="wrap_content"
            android:dropDownHeight="wrap_content"
            android:hint="@string/vendor"
            android:imeOptions="actionDone"
            android:layoutDirection="rtl"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textDirection="rtl" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_only_in_stock"
        android:layout_width="match_parent"
        android:layout_height="0px"

        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"

        android:layoutDirection="rtl"
        android:text="@string/checkbox_only_in_stock"
        app:layout_constraintBottom_toTopOf="@id/search_button"
        app:layout_constraintTop_toBottomOf="@id/vendor_text_input_layout">

    </com.google.android.material.checkbox.MaterialCheckBox>

</androidx.constraintlayout.widget.ConstraintLayout>