<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ListView
        android:id="@+id/barcodes_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/barcodes_label_bottom_sheet"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="center"
        tools:listheader="@tools:sample/us_phones"
        tools:listitem="@tools:sample/us_phones" />

    <TextView
        android:id="@+id/code_label_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_recycler_bottom_sheet"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/item_code"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/code_item_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/code_label_bottom_sheet"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="25sp"


        tools:text="729000123456" />

    <TextView
        android:id="@+id/name_label_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_code_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description"
        android:textAlignment="center"


        android:textSize="15sp" />

    <TextView
        android:id="@+id/name_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/name_label_bottom_sheet"
        android:textAlignment="center"
        android:textDirection="rtl"

        app:autoSizeMaxTextSize="50sp"
        app:autoSizeMinTextSize="25sp"
        app:autoSizeTextType="uniform"

        tools:text=" פלטה לשבת 6 סירים גדולה מאוד מאוד מאוד " />

    <TextView
        android:id="@+id/cost_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_name_price"
        android:layout_alignParentEnd="true"
        android:paddingEnd="24dp"
        android:text="@string/cost"
        android:textAlignment="center"


        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/cost_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cost_label_bottom_sheet"
        android:layout_alignParentEnd="true"
        android:paddingEnd="16dp"
        android:textDirection="rtl"
        android:textSize="25sp"


        tools:ignore="RtlSymmetry"
        tools:text="₪99.90" />

    <TextView
        android:id="@+id/price_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_name_price"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:text="@string/sell"


        android:textSize="25sp" />

    <TextView
        android:id="@+id/price_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_label_bottom_sheet"
        android:layout_centerHorizontal="true"
        android:textDirection="rtl"
        android:textSize="25sp"


        tools:text="₪99.90" />

    <TextView
        android:id="@+id/profit_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_name_price"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:paddingStart="24dp"
        android:text="@string/profit"


        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/profit_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profit_label_bottom_sheet"
        android:layout_alignParentStart="true"
        android:paddingStart="16dp"
        android:textDirection="rtl"
        android:textSize="25sp"


        tools:ignore="RtlSymmetry"
        tools:text="99.90%" />

    <TextView
        android:id="@+id/vendor_label_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_price_vendor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/vendor"
        android:textAlignment="center"


        android:textSize="15sp" />

    <TextView
        android:id="@+id/vendor_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vendor_label_bottom_sheet"
        android:textAlignment="center"
        android:textDirection="rtl"
        android:textSize="25sp"

        tools:text="סולתם רדד בעמ " />

    <TextView
        android:id="@+id/inventory_label_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_vendor_inventory"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/inventory"
        android:textAlignment="center"


        android:textSize="15sp" />


    <TextView
        android:id="@+id/store_inventory_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inventory_label_bottom_sheet"
        android:layout_alignParentEnd="true"
        android:paddingEnd="24dp"
        android:text="@string/store"
        android:textAlignment="center"

        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/store_inventory_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/store_inventory_label_bottom_sheet"
        android:layout_alignParentEnd="true"
        android:paddingEnd="24dp"
        android:textDirection="rtl"
        android:textSize="25sp"

        tools:ignore="RtlSymmetry"
        tools:text="99" />

    <TextView
        android:id="@+id/warehouse_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inventory_label_bottom_sheet"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:text="@string/warehouse"

        android:textSize="25sp" />


    <TextView
        android:id="@+id/warehouse_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warehouse_label_bottom_sheet"
        android:layout_centerHorizontal="true"
        android:textDirection="rtl"
        android:textSize="25sp"
        tools:text="999" />

    <TextView
        android:id="@+id/vendor_inventory_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inventory_label_bottom_sheet"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:text="@string/vendors"
        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/vendor_inventory_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vendor_inventory_label_bottom_sheet"
        android:layout_alignParentStart="true"
        android:paddingStart="32dp"
        android:textDirection="rtl"
        android:textSize="25sp"
        tools:ignore="RtlSymmetry"
        tools:text="9" />

    <TextView
        android:id="@+id/barcodes_label_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_inventory_barcodes"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/additional_barcodes"
        android:textAlignment="center"
        android:textSize="15sp" />

    <View
        android:id="@+id/divider_recycler_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark" />

    <View
        android:id="@+id/divider_code_name"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/code_item_bottom_sheet"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider_name_price"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/name_bottom_sheet"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider_price_vendor"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/profit_bottom_sheet"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />


    <View
        android:id="@+id/divider_vendor_inventory"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/vendor_bottom_sheet"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider_inventory_barcodes"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/store_inventory_bottom_sheet"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider" />


</RelativeLayout>